<resources>
    <string name="app_name">Normal Calculator</string>
    <string name="person_name">Andy Rubin</string>
    <string name="phone">Phone:</string>
    <string name="phone_hint">Phone</string>
    <string name="email">Email:</string>
    <string name="address">Address:</string>
    <string name="hint_email">email</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="skills">Skills:</string>
    <string name="java">Java</string>
    <string name="beauty_and_the_beast">Beauty and the\nBeast</string>
</resources>
